# commercyfy-core

./: .dockerignore  .env-example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: publish-container.yaml
migrations/: 0001-DB-SEED.sql  0001-DB-SETUP.sql  h
src/: lib.rs  main.rs
src/middlewares/: authentication.rs
src/migration_generator/: mod.rs
src/models/: account.rs  base_extensions.rs  category.rs  error.rs  inventory.rs  mod.rs  portal_user.rs  pricebook.rs  product.rs
src/route_utils/: extractors.rs  mod.rs
src/routes/: category.rs  inventory.rs  logs.rs  mod.rs  portal.rs  portal_user.rs  pricebook.rs  product.rs
src/routes/base_extensions/: mod.rs
src/schemas/: account.rs  base_extensions.rs  category.rs  inventory.rs  logs.rs  mod.rs  portal_user.rs  pricebook.rs  product.rs
src/schemas/base_extensions/: mod.rs
src/services/: mod.rs
src/services/db/: mod.rs
src/services/logger/: mod.rs
src/services/role_validation/: mod.rs
src/services/unstructureddb/: entry.rs  mod.rs
src/utils/: custom_fields.rs  mod.rs  passwords.rs
