[package]
name = "commercyfy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
rust_decimal = "1.35.0"
serde = { version = "1.0.202", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "rust_decimal"] }
tokio = { version = "1.37.0", features = ["full"] }

[dependencies.uuid]
features = ["serde"]
