[package]
name = "commercyfy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
axum = "0.7.5"
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
mongodb = { version = "2.8.2", features = ["tokio-runtime"] }
rust_decimal = "1.35.0"
serde = { version = "1.0.202", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "rust_decimal"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-sessions = { version = "0.12.2", features = ["memory-store"] }

[dependencies.uuid]
version = "1.7.0"
features = ["serde"]

[lints.clippy]
implicit_return = "deny"
needless_return = "allow"

[[bin]]
name = "core"
path = "src/bin/core/main.rs"

[[bin]]
name = "shopper-context"
path = "src/bin/shopper-context/main.rs"
